include/vlc_threads.h
@@ -68,12 +68,7 @@ typedef struct
     };
 } vlc_mutex_t;
 #define VLC_STATIC_MUTEX { false, { { false, 0 } } }
-typedef struct
-{
-    HANDLE   semaphore;
-    LONG     waiters;
-} vlc_cond_t;
-#define VLC_STATIC_COND { NULL, 0 }
+#define LIBVLC_NEED_CONDVAR
 typedef HANDLE vlc_sem_t;
 #define LIBVLC_NEED_RWLOCK
 typedef struct vlc_threadvar *vlc_threadvar_t;
